2007-03-02  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/example/AdultInfoHandler.java: 
	* src/de/schlund/pfixcore/example/ContextAdultInfoImpl.java: 
	* src/de/schlund/pfixcore/example/ContextCounterImpl.java: 
	* src/de/schlund/pfixcore/example/ContextTrouserImpl.java: 
	* src/de/schlund/pfixcore/example/ContextTShirtImpl.java: 
	* src/de/schlund/pfixcore/example/CounterHandler.java: 
	* src/de/schlund/pfixcore/example/CounterSetHandler.java: 
	* src/de/schlund/pfixcore/example/MsgFlowStepAction.java: 
	* src/de/schlund/pfixcore/example/SampleStartIC.java: 
	* src/de/schlund/pfixcore/example/TrouserHandler.java: 
	* src/de/schlund/pfixcore/example/TShirtHandler.java: 
	* src/de/schlund/pfixcore/generator/casters/ToBoolean.java: 
	* src/de/schlund/pfixcore/generator/casters/ToFile.java: 
	* src/de/schlund/pfixcore/generator/casters/ToInteger.java: 
	* src/de/schlund/pfixcore/generator/casters/ToLong.java: 
	* src/de/schlund/pfixcore/generator/IHandlerFactory.java: 
	* src/de/schlund/pfixcore/generator/IWrapperImpl.java: 
	* src/de/schlund/pfixcore/generator/IWrapperIndexedParam.java: 
	* src/de/schlund/pfixcore/generator/IWrapperParam.java: 
	* src/de/schlund/pfixcore/generator/SimpleCheck.java: 
	* src/de/schlund/pfixcore/lucefix/DocumentCache.java: 
	* src/de/schlund/pfixcore/lucefix/PfixQueueManager.java: 
	* src/de/schlund/pfixcore/lucefix/PfixReadjustment.java: 
	* src/de/schlund/pfixcore/workflow/app/DefaultIWrapperState.java: 
	* src/de/schlund/pfixcore/workflow/app/IHandlerContainerManager.java: 
	* src/de/schlund/pfixcore/workflow/app/IWrapperSimpleContainer.java: 
	* src/de/schlund/pfixcore/workflow/app/RequestDataImpl.java: 
	* src/de/schlund/pfixcore/workflow/app/ResdocFinalizerFactory.java: 
	* src/de/schlund/pfixcore/workflow/app/ResdocSimpleFinalizer.java: 
	* src/de/schlund/pfixcore/workflow/context/PageFlow.java: 
	* src/de/schlund/pfixcore/workflow/DirectOutputPageMap.java: 